--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,63 +1,82 @@
 # 2024-04-03
 
-共 290 条
+共 303 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 17:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 03 2024 18:00:53 GMT+0800 (China Standard Time) -->
+1. [台湾强震已致9死821伤](https://so.toutiao.com/search?keyword=台湾强震已致9死821伤)
 1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
-1. [男孩说想当农发行行长继承“家产”](https://so.toutiao.com/search?keyword=男孩说想当农发行行长继承“家产”)
 1. [从北到南的春耕“渐变色”](https://so.toutiao.com/search?keyword=从北到南的春耕“渐变色”)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
+1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
 1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
-1. [“提灯定损”事件通报再引4项疑问](https://so.toutiao.com/search?keyword=“提灯定损”事件通报再引4项疑问)
-1. [直击小米SU7全国首批交付现场](https://so.toutiao.com/search?keyword=直击小米SU7全国首批交付现场)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
-1. [吴玺(女)任国台办副主任](https://so.toutiao.com/search?keyword=吴玺(女)任国台办副主任)
 1. [媒体辟谣上海地铁站安检查出“炸弹”](https://so.toutiao.com/search?keyword=媒体辟谣上海地铁站安检查出“炸弹”)
+1. [返乡祭祖小车落水致3死 1干部失联](https://so.toutiao.com/search?keyword=返乡祭祖小车落水致3死+1干部失联)
+1. [“提灯定损”事件通报再引4项疑问](https://so.toutiao.com/search?keyword=“提灯定损”事件通报再引4项疑问)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
+1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
+1. [男子要求2女孩陪酒被拒后动手打人](https://so.toutiao.com/search?keyword=男子要求2女孩陪酒被拒后动手打人)
+1. [提灯定损地：一个县肯定有个把人渣](https://so.toutiao.com/search?keyword=提灯定损地：一个县肯定有个把人渣)
+1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
+1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
+1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
+1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
+1. [宋爷爷头抵车门与福宝告别](https://so.toutiao.com/search?keyword=宋爷爷头抵车门与福宝告别)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
+1. [王婆面对“泼天流量”如何保持清醒](https://so.toutiao.com/search?keyword=王婆面对“泼天流量”如何保持清醒)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [改规则后“王婆说媒”更靠谱](https://so.toutiao.com/search?keyword=改规则后“王婆说媒”更靠谱)
+1. [力挺和背刺万科的都是谁](https://so.toutiao.com/search?keyword=力挺和背刺万科的都是谁)
+1. [香港女子在花莲旅游亲历7.3级地震](https://so.toutiao.com/search?keyword=香港女子在花莲旅游亲历7.3级地震)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
+1. [福宝装箱过程中宋爷爷不舍抚摸](https://so.toutiao.com/search?keyword=福宝装箱过程中宋爷爷不舍抚摸)
+1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [以色列防长称正在整个中东地区行动](https://so.toutiao.com/search?keyword=以色列防长称正在整个中东地区行动)
+1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
+1. [宁夏中学生徒步108里为烈士扫墓](https://so.toutiao.com/search?keyword=宁夏中学生徒步108里为烈士扫墓)
+1. [对话开封王婆：让交友变得纯粹](https://so.toutiao.com/search?keyword=对话开封王婆：让交友变得纯粹)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [江苏常熟有震感：吊灯摇晃](https://so.toutiao.com/search?keyword=江苏常熟有震感：吊灯摇晃)
+1. [媒体：别让流量消解相亲严肃性](https://so.toutiao.com/search?keyword=媒体：别让流量消解相亲严肃性)
+1. [海啸警报解除](https://so.toutiao.com/search?keyword=海啸警报解除)
+1. [曝祁连山盗采事件举报人坠楼身亡](https://so.toutiao.com/search?keyword=曝祁连山盗采事件举报人坠楼身亡)
+1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
+1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
+1. [台网友称震前云彩奇景如9·21大震前](https://so.toutiao.com/search?keyword=台网友称震前云彩奇景如9·21大震前)
+1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
+1. [男孩说想当农发行行长继承“家产”](https://so.toutiao.com/search?keyword=男孩说想当农发行行长继承“家产”)
+1. [直击小米SU7全国首批交付现场](https://so.toutiao.com/search?keyword=直击小米SU7全国首批交付现场)
+1. [吴玺(女)任国台办副主任](https://so.toutiao.com/search?keyword=吴玺(女)任国台办副主任)
 1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
 1. [两部门调整汽车贷款有关政策](https://so.toutiao.com/search?keyword=两部门调整汽车贷款有关政策)
-1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
-1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
-1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
 1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
-1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
-1. [宋爷爷头抵车门与福宝告别](https://so.toutiao.com/search?keyword=宋爷爷头抵车门与福宝告别)
-1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
-1. [提灯定损地：一个县肯定有个把人渣](https://so.toutiao.com/search?keyword=提灯定损地：一个县肯定有个把人渣)
 1. [女子冒用已逝表姐身份贷款被判刑](https://so.toutiao.com/search?keyword=女子冒用已逝表姐身份贷款被判刑)
-1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
-1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
 1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
 1. [以军空袭伊朗驻叙使馆会有什么后果](https://so.toutiao.com/search?keyword=以军空袭伊朗驻叙使馆会有什么后果)
-1. [改规则后“王婆说媒”更靠谱](https://so.toutiao.com/search?keyword=改规则后“王婆说媒”更靠谱)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
 1. [女子试驾新车闯红灯酿事故被索赔](https://so.toutiao.com/search?keyword=女子试驾新车闯红灯酿事故被索赔)
-1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
-1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
-1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
-1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
 1. [台湾花莲地震现场：山体严重滑坡](https://so.toutiao.com/search?keyword=台湾花莲地震现场：山体严重滑坡)
 1. [花莲教师：许多房屋倾斜 已停工停课](https://so.toutiao.com/search?keyword=花莲教师：许多房屋倾斜+已停工停课)
-1. [以色列防长称正在整个中东地区行动](https://so.toutiao.com/search?keyword=以色列防长称正在整个中东地区行动)
 1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [对话开封王婆：让交友变得纯粹](https://so.toutiao.com/search?keyword=对话开封王婆：让交友变得纯粹)
 1. [大V：提灯定损村委会协调败事有余](https://so.toutiao.com/search?keyword=大V：提灯定损村委会协调败事有余)
 1. [台名嘴感谢大陆关心花莲强震](https://so.toutiao.com/search?keyword=台名嘴感谢大陆关心花莲强震)
 1. [真主党发射重型火箭弹打击以军基地](https://so.toutiao.com/search?keyword=真主党发射重型火箭弹打击以军基地)
 1. [端果盘磕到冰箱门致玻璃面板碎裂](https://so.toutiao.com/search?keyword=端果盘磕到冰箱门致玻璃面板碎裂)
-1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
 1. [詹姆斯谈海斯胯下换手扣篮：10分](https://so.toutiao.com/search?keyword=詹姆斯谈海斯胯下换手扣篮：10分)
 1. [南昌有震感众人楼下避险](https://so.toutiao.com/search?keyword=南昌有震感众人楼下避险)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
-1. [曝祁连山盗采事件举报人坠楼身亡](https://so.toutiao.com/search?keyword=曝祁连山盗采事件举报人坠楼身亡)
 1. [台湾空军基地至少8架F-16战机受损](https://so.toutiao.com/search?keyword=台湾空军基地至少8架F-16战机受损)
-1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
-1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
 1. [共谱中非数字合作新篇章](https://so.toutiao.com/search?keyword=共谱中非数字合作新篇章)
 1. [江西玉山通报“提灯定损”事件](https://so.toutiao.com/search?keyword=江西玉山通报“提灯定损”事件)
 1. [直播连线台湾地震亲历者](https://so.toutiao.com/search?keyword=直播连线台湾地震亲历者)
-1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
 1. [台民众直击地震现场](https://so.toutiao.com/search?keyword=台民众直击地震现场)
 1. [专家：本次地震海啸对大陆没啥影响](https://so.toutiao.com/search?keyword=专家：本次地震海啸对大陆没啥影响)
@@ -66,11 +85,9 @@
 1. [联合国谴责以方空袭伊朗驻叙大使馆](https://so.toutiao.com/search?keyword=联合国谴责以方空袭伊朗驻叙大使馆)
 1. [全面还原中甲离谱判罚](https://so.toutiao.com/search?keyword=全面还原中甲离谱判罚)
 1. [台湾强震已致7死](https://so.toutiao.com/search?keyword=台湾强震已致7死)
-1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
 1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
 1. [专家谈花莲和冲绳两地同日发生地震](https://so.toutiao.com/search?keyword=专家谈花莲和冲绳两地同日发生地震)
 1. [台湾地震前“天空怪异美照”引热议](https://so.toutiao.com/search?keyword=台湾地震前“天空怪异美照”引热议)
-1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
 1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
 1. [多趟列车晚点 直击福州火车站](https://so.toutiao.com/search?keyword=多趟列车晚点+直击福州火车站)
 1. [提灯定损房东或面临10项问题](https://so.toutiao.com/search?keyword=提灯定损房东或面临10项问题)
@@ -93,7 +110,6 @@
 1. [台花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=台花莲10层大楼强震中倒塌瞬间曝光)
 1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
 1. [台湾地震已引发局地海啸](https://so.toutiao.com/search?keyword=台湾地震已引发局地海啸)
-1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
 1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
 1. [台媒：花莲成“孤城”](https://so.toutiao.com/search?keyword=台媒：花莲成“孤城”)
 1. [俞敏洪：随时做好关门准备](https://so.toutiao.com/search?keyword=俞敏洪：随时做好关门准备)
@@ -103,7 +119,6 @@
 1. [湖人首发五人近10场场均轰103.4分](https://so.toutiao.com/search?keyword=湖人首发五人近10场场均轰103.4分)
 1. [江西风雹灾害已致7人死亡](https://so.toutiao.com/search?keyword=江西风雹灾害已致7人死亡)
 1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
-1. [江苏常熟有震感：吊灯摇晃](https://so.toutiao.com/search?keyword=江苏常熟有震感：吊灯摇晃)
 1. [胡锡进：在美国无存款无房产无亲人](https://so.toutiao.com/search?keyword=胡锡进：在美国无存款无房产无亲人)
 1. [花莲地震4.0级及以上余震已达21次](https://so.toutiao.com/search?keyword=花莲地震4.0级及以上余震已达21次)
 1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
@@ -115,7 +130,6 @@
 1. [退租定损谁说的算](https://so.toutiao.com/search?keyword=退租定损谁说的算)
 1. [开封王婆家属否认成立婚介公司](https://so.toutiao.com/search?keyword=开封王婆家属否认成立婚介公司)
 1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
-1. [媒体：别让流量消解相亲严肃性](https://so.toutiao.com/search?keyword=媒体：别让流量消解相亲严肃性)
 1. [詹姆斯近2战投篮命中率79.3%](https://so.toutiao.com/search?keyword=詹姆斯近2战投篮命中率79.3%)
 1. [地震海啸驾车避险自救指南](https://so.toutiao.com/search?keyword=地震海啸驾车避险自救指南)
 1. [马英九就台湾强震发声：望一切平安](https://so.toutiao.com/search?keyword=马英九就台湾强震发声：望一切平安)
@@ -132,7 +146,6 @@
 1. [台新北一仓库倒塌 3人被救1人受困](https://so.toutiao.com/search?keyword=台新北一仓库倒塌+3人被救1人受困)
 1. [特雷·杨致敬隆多：最出色球员之一](https://so.toutiao.com/search?keyword=特雷·杨致敬隆多：最出色球员之一)
 1. [掘金主帅：文班能让队友们变得更好](https://so.toutiao.com/search?keyword=掘金主帅：文班能让队友们变得更好)
-1. [海啸警报解除](https://so.toutiao.com/search?keyword=海啸警报解除)
 1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
 1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
 1. [曾宝仪亲历地震称根本站不稳](https://so.toutiao.com/search?keyword=曾宝仪亲历地震称根本站不稳)
