--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,45 +1,68 @@
 # 2024-04-03
 
-共 316 条
+共 335 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 19:00:37 GMT+0800 (China Standard Time) -->
-1. [台湾强震已致9死821伤](https://so.toutiao.com/search?keyword=台湾强震已致9死821伤)
+<!-- 最后更新时间 Wed Apr 03 2024 20:13:15 GMT+0800 (China Standard Time) -->
+1. [台湾强震已致10死934伤](https://so.toutiao.com/search?keyword=台湾强震已致10死934伤)
 1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
 1. [从北到南的春耕“渐变色”](https://so.toutiao.com/search?keyword=从北到南的春耕“渐变色”)
-1. [男子要求2女孩陪酒被拒后动手打人](https://so.toutiao.com/search?keyword=男子要求2女孩陪酒被拒后动手打人)
+1. [农发行纪检委回应学生继承家产发言](https://so.toutiao.com/search?keyword=农发行纪检委回应学生继承家产发言)
 1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
 1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
+1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
 1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
+1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
+1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
+1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
+1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [宋爷爷头抵车门与福宝告别](https://so.toutiao.com/search?keyword=宋爷爷头抵车门与福宝告别)
+1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
+1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
+1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [一岁男孩玩耍不慎掉进水桶溺死](https://so.toutiao.com/search?keyword=一岁男孩玩耍不慎掉进水桶溺死)
+1. [工商银行存款总额破30万亿](https://so.toutiao.com/search?keyword=工商银行存款总额破30万亿)
+1. [陈乔恩晒地震后家中现状](https://so.toutiao.com/search?keyword=陈乔恩晒地震后家中现状)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
+1. [杭州女子卖了60多万元股票换成金条](https://so.toutiao.com/search?keyword=杭州女子卖了60多万元股票换成金条)
+1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
+1. [美国突然取消购买石油计划](https://so.toutiao.com/search?keyword=美国突然取消购买石油计划)
+1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
+1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
+1. [雷军：小米SU7大定超过10万单](https://so.toutiao.com/search?keyword=雷军：小米SU7大定超过10万单)
+1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
+1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
+1. [美财长耶伦此次访华会去哪家餐馆](https://so.toutiao.com/search?keyword=美财长耶伦此次访华会去哪家餐馆)
+1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
+1. [马英九谈访广东第一印象：欣欣向荣](https://so.toutiao.com/search?keyword=马英九谈访广东第一印象：欣欣向荣)
+1. [专家解读台地震为何会影响上海高层](https://so.toutiao.com/search?keyword=专家解读台地震为何会影响上海高层)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [王为念戴军共唱老情歌](https://so.toutiao.com/search?keyword=王为念戴军共唱老情歌)
+1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
+1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
+1. [日美澳菲将在南海首次联合军演](https://so.toutiao.com/search?keyword=日美澳菲将在南海首次联合军演)
+1. [台湾强震已致9死821伤](https://so.toutiao.com/search?keyword=台湾强震已致9死821伤)
+1. [男子要求2女孩陪酒被拒后动手打人](https://so.toutiao.com/search?keyword=男子要求2女孩陪酒被拒后动手打人)
 1. [媒体辟谣上海地铁站安检查出“炸弹”](https://so.toutiao.com/search?keyword=媒体辟谣上海地铁站安检查出“炸弹”)
 1. [返乡祭祖小车落水致3死 1干部失联](https://so.toutiao.com/search?keyword=返乡祭祖小车落水致3死+1干部失联)
-1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
-1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
-1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
-1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
-1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
-1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
 1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
 1. [宁夏中学生徒步108里为烈士扫墓](https://so.toutiao.com/search?keyword=宁夏中学生徒步108里为烈士扫墓)
-1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
 1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
-1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
-1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
-1. [专家解读台地震为何会影响上海高层](https://so.toutiao.com/search?keyword=专家解读台地震为何会影响上海高层)
-1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
 1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
-1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
-1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
 1. [火锅店内多人打架 有人拿锅底泼人](https://so.toutiao.com/search?keyword=火锅店内多人打架+有人拿锅底泼人)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
-1. [宋爷爷头抵车门与福宝告别](https://so.toutiao.com/search?keyword=宋爷爷头抵车门与福宝告别)
 1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
 1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
 1. [小米SU7产自通州马驹桥镇](https://so.toutiao.com/search?keyword=小米SU7产自通州马驹桥镇)
@@ -47,7 +70,6 @@
 1. [台网友称震前云彩奇景如9·21大震前](https://so.toutiao.com/search?keyword=台网友称震前云彩奇景如9·21大震前)
 1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [力挺和背刺万科的都是谁](https://so.toutiao.com/search?keyword=力挺和背刺万科的都是谁)
-1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
 1. [王婆面对“泼天流量”如何保持清醒](https://so.toutiao.com/search?keyword=王婆面对“泼天流量”如何保持清醒)
 1. [村民20秒救起落水女孩潇洒离去](https://so.toutiao.com/search?keyword=村民20秒救起落水女孩潇洒离去)
 1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
@@ -67,7 +89,6 @@
 1. [媒体：别让流量消解相亲严肃性](https://so.toutiao.com/search?keyword=媒体：别让流量消解相亲严肃性)
 1. [海啸警报解除](https://so.toutiao.com/search?keyword=海啸警报解除)
 1. [曝祁连山盗采事件举报人坠楼身亡](https://so.toutiao.com/search?keyword=曝祁连山盗采事件举报人坠楼身亡)
-1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
 1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
 1. [男孩说想当农发行行长继承“家产”](https://so.toutiao.com/search?keyword=男孩说想当农发行行长继承“家产”)
 1. [直击小米SU7全国首批交付现场](https://so.toutiao.com/search?keyword=直击小米SU7全国首批交付现场)
@@ -113,12 +134,10 @@
 1. [邱毅发文报平安](https://so.toutiao.com/search?keyword=邱毅发文报平安)
 1. [男子小区内驾车碾压3人 警方通报](https://so.toutiao.com/search?keyword=男子小区内驾车碾压3人+警方通报)
 1. [日本气象厅：海啸抵达冲绳与那国岛](https://so.toutiao.com/search?keyword=日本气象厅：海啸抵达冲绳与那国岛)
-1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
 1. [姜爷爷母亲去世依然坚持送福宝回国](https://so.toutiao.com/search?keyword=姜爷爷母亲去世依然坚持送福宝回国)
 1. [福州一小区天桥被震裂？官方证实](https://so.toutiao.com/search?keyword=福州一小区天桥被震裂？官方证实)
 1. [台湾地震一人被落石砸死](https://so.toutiao.com/search?keyword=台湾地震一人被落石砸死)
 1. [高铁晚点](https://so.toutiao.com/search?keyword=高铁晚点)
-1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
 1. [远距离大震为何会使上海的高楼摇晃](https://so.toutiao.com/search?keyword=远距离大震为何会使上海的高楼摇晃)
 1. [台花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=台花莲10层大楼强震中倒塌瞬间曝光)
 1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
