--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,55 +1,72 @@
 # 2024-04-03
 
-共 335 条
+共 345 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 20:13:15 GMT+0800 (China Standard Time) -->
-1. [台湾强震已致10死934伤](https://so.toutiao.com/search?keyword=台湾强震已致10死934伤)
-1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
+<!-- 最后更新时间 Wed Apr 03 2024 21:07:32 GMT+0800 (China Standard Time) -->
+1. [台湾强震已致9死934伤](https://so.toutiao.com/search?keyword=台湾强震已致9死934伤)
+1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
 1. [从北到南的春耕“渐变色”](https://so.toutiao.com/search?keyword=从北到南的春耕“渐变色”)
-1. [农发行纪检委回应学生继承家产发言](https://so.toutiao.com/search?keyword=农发行纪检委回应学生继承家产发言)
-1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
-1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
+1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
+1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
+1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
 1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
 1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
+1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
+1. [贵州省纪委副书记张平被查](https://so.toutiao.com/search?keyword=贵州省纪委副书记张平被查)
+1. [外籍货船与中方渔船碰撞8人失联](https://so.toutiao.com/search?keyword=外籍货船与中方渔船碰撞8人失联)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
 1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
 1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
+1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
 1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
-1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
 1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
+1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
+1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
+1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
+1. [《追风者》沈家兄妹救魏若来](https://so.toutiao.com/search?keyword=《追风者》沈家兄妹救魏若来)
+1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
+1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
+1. [陈乔恩晒地震后家中现状](https://so.toutiao.com/search?keyword=陈乔恩晒地震后家中现状)
+1. [香港游客在花莲被震醒：像闷雷滚动](https://so.toutiao.com/search?keyword=香港游客在花莲被震醒：像闷雷滚动)
+1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
+1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
+1. [一岁男孩玩耍不慎掉进水桶溺死](https://so.toutiao.com/search?keyword=一岁男孩玩耍不慎掉进水桶溺死)
+1. [强震致台湾新北一马路整体塌方](https://so.toutiao.com/search?keyword=强震致台湾新北一马路整体塌方)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [英美法避免谴责以色列引起俄方不满](https://so.toutiao.com/search?keyword=英美法避免谴责以色列引起俄方不满)
+1. [台当局开设灾害应变中心](https://so.toutiao.com/search?keyword=台当局开设灾害应变中心)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [大学生为无名烈士纪念碑“描金”](https://so.toutiao.com/search?keyword=大学生为无名烈士纪念碑“描金”)
+1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
+1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
+1. [女子开店仨月赔60万 脑梗父亲打工](https://so.toutiao.com/search?keyword=女子开店仨月赔60万+脑梗父亲打工)
+1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [马英九谈访广东第一印象：欣欣向荣](https://so.toutiao.com/search?keyword=马英九谈访广东第一印象：欣欣向荣)
+1. [台湾强震已致10死934伤](https://so.toutiao.com/search?keyword=台湾强震已致10死934伤)
+1. [农发行纪检委回应学生继承家产发言](https://so.toutiao.com/search?keyword=农发行纪检委回应学生继承家产发言)
 1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
 1. [宋爷爷头抵车门与福宝告别](https://so.toutiao.com/search?keyword=宋爷爷头抵车门与福宝告别)
-1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
-1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
-1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
-1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
-1. [一岁男孩玩耍不慎掉进水桶溺死](https://so.toutiao.com/search?keyword=一岁男孩玩耍不慎掉进水桶溺死)
 1. [工商银行存款总额破30万亿](https://so.toutiao.com/search?keyword=工商银行存款总额破30万亿)
-1. [陈乔恩晒地震后家中现状](https://so.toutiao.com/search?keyword=陈乔恩晒地震后家中现状)
-1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
-1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
 1. [杭州女子卖了60多万元股票换成金条](https://so.toutiao.com/search?keyword=杭州女子卖了60多万元股票换成金条)
-1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
-1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
 1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
 1. [美国突然取消购买石油计划](https://so.toutiao.com/search?keyword=美国突然取消购买石油计划)
-1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
 1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
 1. [雷军：小米SU7大定超过10万单](https://so.toutiao.com/search?keyword=雷军：小米SU7大定超过10万单)
-1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
-1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
 1. [美财长耶伦此次访华会去哪家餐馆](https://so.toutiao.com/search?keyword=美财长耶伦此次访华会去哪家餐馆)
 1. [韩国粉丝送别福宝泣不成声](https://so.toutiao.com/search?keyword=韩国粉丝送别福宝泣不成声)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
-1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
-1. [马英九谈访广东第一印象：欣欣向荣](https://so.toutiao.com/search?keyword=马英九谈访广东第一印象：欣欣向荣)
 1. [专家解读台地震为何会影响上海高层](https://so.toutiao.com/search?keyword=专家解读台地震为何会影响上海高层)
-1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
 1. [王为念戴军共唱老情歌](https://so.toutiao.com/search?keyword=王为念戴军共唱老情歌)
 1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
 1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
@@ -60,20 +77,17 @@
 1. [返乡祭祖小车落水致3死 1干部失联](https://so.toutiao.com/search?keyword=返乡祭祖小车落水致3死+1干部失联)
 1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
 1. [宁夏中学生徒步108里为烈士扫墓](https://so.toutiao.com/search?keyword=宁夏中学生徒步108里为烈士扫墓)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
 1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
 1. [火锅店内多人打架 有人拿锅底泼人](https://so.toutiao.com/search?keyword=火锅店内多人打架+有人拿锅底泼人)
 1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
 1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
 1. [小米SU7产自通州马驹桥镇](https://so.toutiao.com/search?keyword=小米SU7产自通州马驹桥镇)
-1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
 1. [台网友称震前云彩奇景如9·21大震前](https://so.toutiao.com/search?keyword=台网友称震前云彩奇景如9·21大震前)
 1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [力挺和背刺万科的都是谁](https://so.toutiao.com/search?keyword=力挺和背刺万科的都是谁)
 1. [王婆面对“泼天流量”如何保持清醒](https://so.toutiao.com/search?keyword=王婆面对“泼天流量”如何保持清醒)
 1. [村民20秒救起落水女孩潇洒离去](https://so.toutiao.com/search?keyword=村民20秒救起落水女孩潇洒离去)
 1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
-1. [女子开店仨月赔60万 脑梗父亲打工](https://so.toutiao.com/search?keyword=女子开店仨月赔60万+脑梗父亲打工)
 1. [天水表情哥：坚持做好每一份麻辣烫](https://so.toutiao.com/search?keyword=天水表情哥：坚持做好每一份麻辣烫)
 1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
 1. [“提灯定损”事件通报再引4项疑问](https://so.toutiao.com/search?keyword=“提灯定损”事件通报再引4项疑问)
@@ -142,7 +156,6 @@
 1. [台花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=台花莲10层大楼强震中倒塌瞬间曝光)
 1. [台湾强震已致4死97伤](https://so.toutiao.com/search?keyword=台湾强震已致4死97伤)
 1. [台湾地震已引发局地海啸](https://so.toutiao.com/search?keyword=台湾地震已引发局地海啸)
-1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
 1. [台媒：花莲成“孤城”](https://so.toutiao.com/search?keyword=台媒：花莲成“孤城”)
 1. [俞敏洪：随时做好关门准备](https://so.toutiao.com/search?keyword=俞敏洪：随时做好关门准备)
 1. [强震逢民众党晨会 柯文哲趴地躲桌下](https://so.toutiao.com/search?keyword=强震逢民众党晨会+柯文哲趴地躲桌下)
@@ -150,7 +163,6 @@
 1. [vivo X Fold3/Pro系列手机今日开售](https://so.toutiao.com/search?keyword=vivo+X Fold3/Pro系列手机今日开售)
 1. [湖人首发五人近10场场均轰103.4分](https://so.toutiao.com/search?keyword=湖人首发五人近10场场均轰103.4分)
 1. [江西风雹灾害已致7人死亡](https://so.toutiao.com/search?keyword=江西风雹灾害已致7人死亡)
-1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
 1. [胡锡进：在美国无存款无房产无亲人](https://so.toutiao.com/search?keyword=胡锡进：在美国无存款无房产无亲人)
 1. [花莲地震4.0级及以上余震已达21次](https://so.toutiao.com/search?keyword=花莲地震4.0级及以上余震已达21次)
 1. [雷军：小米正式成为一家车厂](https://so.toutiao.com/search?keyword=雷军：小米正式成为一家车厂)
@@ -179,9 +191,7 @@
 1. [特雷·杨致敬隆多：最出色球员之一](https://so.toutiao.com/search?keyword=特雷·杨致敬隆多：最出色球员之一)
 1. [掘金主帅：文班能让队友们变得更好](https://so.toutiao.com/search?keyword=掘金主帅：文班能让队友们变得更好)
 1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
-1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
 1. [曾宝仪亲历地震称根本站不稳](https://so.toutiao.com/search?keyword=曾宝仪亲历地震称根本站不稳)
-1. [台当局开设灾害应变中心](https://so.toutiao.com/search?keyword=台当局开设灾害应变中心)
 1. [自然资源部发布海啸Ⅰ级警报](https://so.toutiao.com/search?keyword=自然资源部发布海啸Ⅰ级警报)
 1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
 1. [刘若英提醒小心余震](https://so.toutiao.com/search?keyword=刘若英提醒小心余震)
