--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,58 +1,72 @@
 # 2024-04-03
 
-共 345 条
+共 355 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 21:07:32 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 03 2024 22:00:38 GMT+0800 (China Standard Time) -->
 1. [台湾强震已致9死934伤](https://so.toutiao.com/search?keyword=台湾强震已致9死934伤)
-1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
-1. [从北到南的春耕“渐变色”](https://so.toutiao.com/search?keyword=从北到南的春耕“渐变色”)
 1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
-1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
-1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
-1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
+1. [从北到南的春耕“渐变色”](https://so.toutiao.com/search?keyword=从北到南的春耕“渐变色”)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
+1. [江西一夜闪电4.4万次](https://so.toutiao.com/search?keyword=江西一夜闪电4.4万次)
+1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
 1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
-1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
+1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
 1. [贵州省纪委副书记张平被查](https://so.toutiao.com/search?keyword=贵州省纪委副书记张平被查)
 1. [外籍货船与中方渔船碰撞8人失联](https://so.toutiao.com/search?keyword=外籍货船与中方渔船碰撞8人失联)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
 1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
-1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
-1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
+1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
 1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
+1. [台湾已发生167起余震](https://so.toutiao.com/search?keyword=台湾已发生167起余震)
+1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
 1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
 1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [外资600亿抄底万达说明了什么](https://so.toutiao.com/search?keyword=外资600亿抄底万达说明了什么)
+1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
 1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
-1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
 1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
-1. [《追风者》沈家兄妹救魏若来](https://so.toutiao.com/search?keyword=《追风者》沈家兄妹救魏若来)
-1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
+1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
+1. [SU7交车仪式米粉喊话进军房地产](https://so.toutiao.com/search?keyword=SU7交车仪式米粉喊话进军房地产)
 1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
+1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
+1. [“贵妇”撑起县城消费的天花板](https://so.toutiao.com/search?keyword=“贵妇”撑起县城消费的天花板)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [台主播谈强震前网上现天空异象照片](https://so.toutiao.com/search?keyword=台主播谈强震前网上现天空异象照片)
+1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
+1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
+1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
+1. [《追风者》沈家兄妹救魏若来](https://so.toutiao.com/search?keyword=《追风者》沈家兄妹救魏若来)
+1. [印尼学者：中国仍是关键合作伙伴](https://so.toutiao.com/search?keyword=印尼学者：中国仍是关键合作伙伴)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
 1. [陈乔恩晒地震后家中现状](https://so.toutiao.com/search?keyword=陈乔恩晒地震后家中现状)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [宁夏中学生徒步108里为烈士扫墓](https://so.toutiao.com/search?keyword=宁夏中学生徒步108里为烈士扫墓)
+1. [特朗普：因为拜登我们可能陷入三战](https://so.toutiao.com/search?keyword=特朗普：因为拜登我们可能陷入三战)
+1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
+1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
+1. [恙虫病将进入高发季](https://so.toutiao.com/search?keyword=恙虫病将进入高发季)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [杀11岁女孩嫌疑人指认现场引围观](https://so.toutiao.com/search?keyword=杀11岁女孩嫌疑人指认现场引围观)
+1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
+1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
 1. [香港游客在花莲被震醒：像闷雷滚动](https://so.toutiao.com/search?keyword=香港游客在花莲被震醒：像闷雷滚动)
 1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
 1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
-1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
-1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
 1. [一岁男孩玩耍不慎掉进水桶溺死](https://so.toutiao.com/search?keyword=一岁男孩玩耍不慎掉进水桶溺死)
 1. [强震致台湾新北一马路整体塌方](https://so.toutiao.com/search?keyword=强震致台湾新北一马路整体塌方)
-1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
 1. [英美法避免谴责以色列引起俄方不满](https://so.toutiao.com/search?keyword=英美法避免谴责以色列引起俄方不满)
 1. [台当局开设灾害应变中心](https://so.toutiao.com/search?keyword=台当局开设灾害应变中心)
-1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
-1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
 1. [大学生为无名烈士纪念碑“描金”](https://so.toutiao.com/search?keyword=大学生为无名烈士纪念碑“描金”)
-1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
-1. [日本有人拍到海水浴场水位急速下降](https://so.toutiao.com/search?keyword=日本有人拍到海水浴场水位急速下降)
 1. [女子开店仨月赔60万 脑梗父亲打工](https://so.toutiao.com/search?keyword=女子开店仨月赔60万+脑梗父亲打工)
 1. [2000多名师生徒步百里祭英烈](https://so.toutiao.com/search?keyword=2000多名师生徒步百里祭英烈)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
 1. [马英九谈访广东第一印象：欣欣向荣](https://so.toutiao.com/search?keyword=马英九谈访广东第一印象：欣欣向荣)
 1. [台湾强震已致10死934伤](https://so.toutiao.com/search?keyword=台湾强震已致10死934伤)
 1. [农发行纪检委回应学生继承家产发言](https://so.toutiao.com/search?keyword=农发行纪检委回应学生继承家产发言)
@@ -76,8 +90,6 @@
 1. [媒体辟谣上海地铁站安检查出“炸弹”](https://so.toutiao.com/search?keyword=媒体辟谣上海地铁站安检查出“炸弹”)
 1. [返乡祭祖小车落水致3死 1干部失联](https://so.toutiao.com/search?keyword=返乡祭祖小车落水致3死+1干部失联)
 1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
-1. [宁夏中学生徒步108里为烈士扫墓](https://so.toutiao.com/search?keyword=宁夏中学生徒步108里为烈士扫墓)
-1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
 1. [火锅店内多人打架 有人拿锅底泼人](https://so.toutiao.com/search?keyword=火锅店内多人打架+有人拿锅底泼人)
 1. [专家建议年轻人尽早准备养老](https://so.toutiao.com/search?keyword=专家建议年轻人尽早准备养老)
 1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
@@ -96,7 +108,6 @@
 1. [改规则后“王婆说媒”更靠谱](https://so.toutiao.com/search?keyword=改规则后“王婆说媒”更靠谱)
 1. [香港女子在花莲旅游亲历7.3级地震](https://so.toutiao.com/search?keyword=香港女子在花莲旅游亲历7.3级地震)
 1. [福宝装箱过程中宋爷爷不舍抚摸](https://so.toutiao.com/search?keyword=福宝装箱过程中宋爷爷不舍抚摸)
-1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
 1. [以色列防长称正在整个中东地区行动](https://so.toutiao.com/search?keyword=以色列防长称正在整个中东地区行动)
 1. [对话开封王婆：让交友变得纯粹](https://so.toutiao.com/search?keyword=对话开封王婆：让交友变得纯粹)
 1. [江苏常熟有震感：吊灯摇晃](https://so.toutiao.com/search?keyword=江苏常熟有震感：吊灯摇晃)
@@ -111,7 +122,6 @@
 1. [两部门调整汽车贷款有关政策](https://so.toutiao.com/search?keyword=两部门调整汽车贷款有关政策)
 1. [美财政部公布耶伦访华行程](https://so.toutiao.com/search?keyword=美财政部公布耶伦访华行程)
 1. [女子冒用已逝表姐身份贷款被判刑](https://so.toutiao.com/search?keyword=女子冒用已逝表姐身份贷款被判刑)
-1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
 1. [以军空袭伊朗驻叙使馆会有什么后果](https://so.toutiao.com/search?keyword=以军空袭伊朗驻叙使馆会有什么后果)
 1. [女子试驾新车闯红灯酿事故被索赔](https://so.toutiao.com/search?keyword=女子试驾新车闯红灯酿事故被索赔)
 1. [台湾花莲地震现场：山体严重滑坡](https://so.toutiao.com/search?keyword=台湾花莲地震现场：山体严重滑坡)
