--- a/archives/zhihu-questions/2024-04-03.md
+++ b/archives/zhihu-questions/2024-04-03.md
@@ -1,59 +1,82 @@
 # 2024-04-03
 
-共 308 条
+共 326 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Wed Apr 03 2024 22:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 03 2024 23:00:50 GMT+0800 (China Standard Time) -->
 1. [伊朗最高领袖誓言将对以色列袭击伊使馆进行「惩罚」，事态会如何发展？还有哪些信息值得关注？](https://www.zhihu.com/question/651434260)
-1. [清明节前AI「复活亲人」平台搜索量暴增，AI情感疗愈是否会成全新趋势？](https://www.zhihu.com/question/651457769)
-1. [中央气象台发连续 5 天发布强对流天气预警，南昌遭遇极端天气致 4 死 10 余伤，如何应对恶劣天气？](https://www.zhihu.com/question/651468960)
 1. [《周处除三害》中陈桂林的手枪为什么总是卡壳？](https://www.zhihu.com/question/646340476)
-1. [如何评价宫崎骏新作《你想活出怎样的人生》？](https://www.zhihu.com/question/651357776)
+1. [中央气象台发连续 5 天发布强对流天气预警，南昌遭遇极端天气致 4 死 10 余伤，如何应对恶劣天气？](https://www.zhihu.com/question/651468960)
 1. [网传南京一考研生总成绩专业排名第一被刷，曾被曝在宿舍虐杀猫，校方回应，如何看待此事？哪些信息值得关注？](https://www.zhihu.com/question/651493066)
+1. [台湾强震前网上现「天空异象」照片，被指是「地震前兆」，如何从科学角度解释这种「异象」？](https://www.zhihu.com/question/651516653)
+1. [为啥低谷爬出来的人越来越厉害？](https://www.zhihu.com/question/651026305)
+1. [浙大和复旦如何选择?](https://www.zhihu.com/question/651083688)
+1. [你有结账时发现太贵的尴尬经历吗？](https://www.zhihu.com/question/407356856)
+1. [为什么唐小龙出狱之后，不选择洗手上岸？](https://www.zhihu.com/question/584383155)
+1. [以前一位领导说，你们都年纪轻轻的，家人肯定都健在，没必要放清明节假的，好好上班吧！大家遇到过吗？](https://www.zhihu.com/question/651445658)
+1. [分享一些你深爱许久的句子？](https://www.zhihu.com/question/651277314)
+1. [怎么做才能真正帮助到社会底层的人？](https://www.zhihu.com/question/49223217)
+1. [你有什么相见恨晚的英语学习方法？](https://www.zhihu.com/question/26677313)
+1. [如果一个善良的人输了，你认为会输在哪儿？](https://www.zhihu.com/question/644589736)
+1. [是什么让你开始放下手机去读书？](https://www.zhihu.com/question/303137880)
+1. [一个人能聪明到什么程度？](https://www.zhihu.com/question/31219081)
+1. [《崩坏：星穹铁道》的「存护」星神克里珀动作这么慢是怎么造墙的？](https://www.zhihu.com/question/603007268)
+1. [把100只家鸡放到荒野中，3年后它们有什么变化？](https://www.zhihu.com/question/434124471)
+1. [如何评价宫崎骏新作《你想活出怎样的人生》？](https://www.zhihu.com/question/651357776)
+1. [电动汽车为什么一下爆发了？](https://www.zhihu.com/question/562563592)
+1. [对公务员的考试一无所知，该怎样准备？](https://www.zhihu.com/question/321438898)
+1. [好朋友渐行渐远，你会释怀吗？](https://www.zhihu.com/question/644044756)
+1. [天津饭为什么离开了？](https://www.zhihu.com/question/465616957)
+1. [有哪些是你慢慢想明白了的道理？](https://www.zhihu.com/question/350870631)
+1. [为什么我女儿不愿意和我沟通，我说句话她就像疯了一样和我顶嘴呢？](https://www.zhihu.com/question/651219562)
+1. [你知道哪些足够沙雕的段子？](https://www.zhihu.com/question/329382131)
+1. [大学里一个人坐一排会觉得尴尬吗？](https://www.zhihu.com/question/647825634)
+1. [年轻人刚工作先买车还是先买房？](https://www.zhihu.com/question/645170291)
+1. [男人有胡子和没胡子，颜值差距有多大？](https://www.zhihu.com/question/271673163)
+1. [受台湾 7.3 级地震影响，国铁广州局、南昌局、上海铁路局部分线路临时封锁或限速，地震还有哪些影响？](https://www.zhihu.com/question/651439061)
+1. [世界上收敛最快的计算 π 的公式是什么？](https://www.zhihu.com/question/318010986)
+1. [为啥优秀的孩子总是别人家的？](https://www.zhihu.com/question/645385110)
+1. [初学者怎么入门大语言模型（LLM）？](https://www.zhihu.com/question/644285055)
+1. [国产车的崛起给我们带来什么好处？](https://www.zhihu.com/question/620117759)
+1. [大地震却没收到预警短信，投入大笔公款的警报也未能发挥作用，台「气象署」称低估了震度，如何评价？](https://www.zhihu.com/question/651489943)
+1. [钱可以左右人的生活吗？](https://www.zhihu.com/question/610031701)
+1. [芙莉莲为什么50年都不去找勇者?](https://www.zhihu.com/question/642793773)
+1. [夜华为什么不喜欢素锦？](https://www.zhihu.com/question/55772258)
+1. [海南西南海域一外籍货船与渔船发生碰撞，8 人失联，哪些信息值得关注？](https://www.zhihu.com/question/651538044)
+1. [美媒报道「巴方至少逮捕 12 人，涉嫌参与导致 5 名中国公民死亡的恐怖袭击」，哪些信息值得关注？](https://www.zhihu.com/question/651405414)
+1. [“一片落叶一处伤”，后句该怎么接？](https://www.zhihu.com/question/651351963)
+1. [两部门发布通知，自用传统动力汽车、自用新能源汽车贷款最高发放比例由金融机构自主确定，将带来哪些影响？](https://www.zhihu.com/question/651492597)
+1. [有什么你去了俄罗斯才知道的事？](https://www.zhihu.com/question/342145939)
+1. [未来的大趋势到底是油车还是电车？](https://www.zhihu.com/question/620118718)
+1. [有哪些意境非常非常优美，但是很少见的诗句？](https://www.zhihu.com/question/651277383)
+1. [《英雄联盟》联赛 BO5 赛制是否时间太长而影响选手的身体健康？](https://www.zhihu.com/question/651243604)
+1. [在明白什么道理后你不在焦虑了？](https://www.zhihu.com/question/629658395)
+1. [你最喜欢或者对你影响最大的一本书是什么呢？](https://www.zhihu.com/question/650469640)
+1. [我们穷极一生，本质是追求什么？](https://www.zhihu.com/question/638481226)
+1. [旅行中，你觉得哪座城市的集市最「与众不同」？](https://www.zhihu.com/question/648669807)
+1. [清明节前AI「复活亲人」平台搜索量暴增，AI情感疗愈是否会成全新趋势？](https://www.zhihu.com/question/651457769)
 1. [台湾花莲地震已致 7 人死亡 711 人受伤，目前当地情况如何？哪些信息值得关注？](https://www.zhihu.com/question/651479772)
 1. [如何评价那维莱特首次复刻流水就挂0？](https://www.zhihu.com/question/651453185)
-1. [为啥低谷爬出来的人越来越厉害？](https://www.zhihu.com/question/651026305)
-1. [台湾强震前网上现「天空异象」照片，被指是「地震前兆」，如何从科学角度解释这种「异象」？](https://www.zhihu.com/question/651516653)
-1. [世界上收敛最快的计算 π 的公式是什么？](https://www.zhihu.com/question/318010986)
-1. [分享一些你深爱许久的句子？](https://www.zhihu.com/question/651277314)
-1. [为什么唐小龙出狱之后，不选择洗手上岸？](https://www.zhihu.com/question/584383155)
 1. [为什么好多研究生都不愿意继续读博士了？](https://www.zhihu.com/question/575717530)
 1. [赚钱的本质是什么？](https://www.zhihu.com/question/63007253)
 1. [你们是怎么看待上床下桌？](https://www.zhihu.com/question/61187448)
 1. [如何在两个月内快速改变自己？](https://www.zhihu.com/question/451986493)
 1. [到了哪些旅行地后，你真心觉得「这一次没白来」？](https://www.zhihu.com/question/647555777)
 1. [法师为什么不把法杖打造成近战武器的样子？](https://www.zhihu.com/question/630533156)
-1. [旅行中，你觉得哪座城市的集市最「与众不同」？](https://www.zhihu.com/question/648669807)
-1. [初学者怎么入门大语言模型（LLM）？](https://www.zhihu.com/question/644285055)
-1. [对公务员的考试一无所知，该怎样准备？](https://www.zhihu.com/question/321438898)
 1. [在大学里，你们都是怎么找到女朋友的？](https://www.zhihu.com/question/61419063)
 1. [你会选择「封闭式阳台」多一个家政空间，还是「开放式阳台」圆一个做田园梦？](https://www.zhihu.com/question/647385548)
-1. [好朋友渐行渐远，你会释怀吗？](https://www.zhihu.com/question/644044756)
 1. [李寻欢身上的飞刀不多，为何反派们不一起上？](https://www.zhihu.com/question/622346804)
-1. [大学里一个人坐一排会觉得尴尬吗？](https://www.zhihu.com/question/647825634)
-1. [为什么我女儿不愿意和我沟通，我说句话她就像疯了一样和我顶嘴呢？](https://www.zhihu.com/question/651219562)
-1. [年轻人刚工作先买车还是先买房？](https://www.zhihu.com/question/645170291)
-1. [受台湾 7.3 级地震影响，国铁广州局、南昌局、上海铁路局部分线路临时封锁或限速，地震还有哪些影响？](https://www.zhihu.com/question/651439061)
-1. [为啥优秀的孩子总是别人家的？](https://www.zhihu.com/question/645385110)
 1. [为什么罗恩会被分到格兰芬多学院？](https://www.zhihu.com/question/489643957)
-1. [芙莉莲为什么50年都不去找勇者?](https://www.zhihu.com/question/642793773)
 1. [女警和卡莎哪一个更容易上手?](https://www.zhihu.com/question/356506238)
-1. [大地震却没收到预警短信，投入大笔公款的警报也未能发挥作用，台「气象署」称低估了震度，如何评价？](https://www.zhihu.com/question/651489943)
 1. [怎么才能停止自己脑子里的胡思乱想？](https://www.zhihu.com/question/286764525)
-1. [“一片落叶一处伤”，后句该怎么接？](https://www.zhihu.com/question/651351963)
 1. [真的会看自己写的日记吗，看的时候又是什么心态呢?](https://www.zhihu.com/question/633909100)
-1. [海南西南海域一外籍货船与渔船发生碰撞，8 人失联，哪些信息值得关注？](https://www.zhihu.com/question/651538044)
-1. [美媒报道「巴方至少逮捕 12 人，涉嫌参与导致 5 名中国公民死亡的恐怖袭击」，哪些信息值得关注？](https://www.zhihu.com/question/651405414)
 1. [贵州茅台去年净利 747.34 亿元，同比增加 19.16%，拟分红 387 亿，哪些信息值得关注？](https://www.zhihu.com/question/651453496)
-1. [两部门发布通知，自用传统动力汽车、自用新能源汽车贷款最高发放比例由金融机构自主确定，将带来哪些影响？](https://www.zhihu.com/question/651492597)
 1. [疝气是什么？疝气有哪些常见的类型？](https://www.zhihu.com/question/651293277)
 1. [特斯拉第一季度纯电动汽车销量反超比亚迪，背后原因有哪些？如何看待此事？](https://www.zhihu.com/question/651450548)
 1. [侧卧睡可能造成脊柱侧弯，睡觉的正确姿势有哪些？](https://www.zhihu.com/question/651293222)
-1. [你最喜欢或者对你影响最大的一本书是什么呢？](https://www.zhihu.com/question/650469640)
 1. [最新研究称「睡眠时间短」与2型糖尿病风险升高有关，如何看待这一发现？怎样科学预防糖尿病？](https://www.zhihu.com/question/650679630)
 1. [万科回应郁亮操控万科谋取私利指控，「内容严重失实，公司会采取法律行动维护合法权益」，哪些信息值得关注？](https://www.zhihu.com/question/651293377)
 1. [比特币 10 分钟跳水超 6%，24 小时 34 亿元蒸发、15 万人爆仓，发生了什么？](https://www.zhihu.com/question/651436700)
-1. [钱可以左右人的生活吗？](https://www.zhihu.com/question/610031701)
 1. [对一个人失望到极致是种什么样的感觉？](https://www.zhihu.com/question/24378150)
 1. [发现意外怀孕你是怎么处理的？](https://www.zhihu.com/question/267406405)
 1. [什么是遗憾?](https://www.zhihu.com/question/23346504)
@@ -69,7 +92,6 @@
 1. [古代有哪些让人动容的爱情故事？](https://www.zhihu.com/question/27556899)
 1. [如何锻炼出强悍的分析能力？](https://www.zhihu.com/question/29035318)
 1. [「百日咳」病例达去年同期 23 倍，如何看待这一现象？怎样做好科学应对？](https://www.zhihu.com/question/651340946)
-1. [未来的大趋势到底是油车还是电车？](https://www.zhihu.com/question/620118718)
 1. [有没有一本数学书涵盖初高中所有知识点，比较适合自学数学的书籍（教材）？](https://www.zhihu.com/question/517213170)
 1. [陈世美为何死都不认秦香莲？](https://www.zhihu.com/question/501170369)
 1. [怎么评价詹姆斯在博客节目中，将总决赛热火不敌小牛，归因于热火角色球员不如小牛的看法？](https://www.zhihu.com/question/651484369)
@@ -107,7 +129,6 @@
 1. [家里俩孩子，我全职带孩子，老大男孩七岁，现在总说钱爸爸赚的什么的我该怎么办？](https://www.zhihu.com/question/645595657)
 1. [章北海与父亲的谈话是否被智子监听？](https://www.zhihu.com/question/629713016)
 1. [动人春色无须多，__________。你会怎么接下一句，或者讲一个故事？](https://www.zhihu.com/question/651219466)
-1. [在明白什么道理后你不在焦虑了？](https://www.zhihu.com/question/629658395)
 1. [如何评价《英雄联盟》的极地大乱斗模式？](https://www.zhihu.com/question/639573105)
 1. [运动减肥遇到瓶颈期，怎么调整？](https://www.zhihu.com/question/651456061)
 1. [真正努力的人到底有多恐怖？](https://www.zhihu.com/question/319349527)
@@ -151,7 +172,6 @@
 1. [清明节气应该怎样养生补身？](https://www.zhihu.com/question/651449253)
 1. [东北人为什么这么有趣？](https://www.zhihu.com/question/428347449)
 1. [日常生活中，买手环还是智能手表？](https://www.zhihu.com/question/649154577)
-1. [有哪些意境非常非常优美，但是很少见的诗句？](https://www.zhihu.com/question/651277383)
 1. [有没有朋友圈日常简短文案？](https://www.zhihu.com/question/476906799)
 1. [有什么是你去了浙江才知道的？](https://www.zhihu.com/question/540446479)
 1. [哪些笑话让你笑得前仰后合？](https://www.zhihu.com/question/30377773)
@@ -198,7 +218,6 @@
 1. [特斯拉转向全新组装工艺「 unbox 」，类似「组装乐高积木」，有望使生产成本减半，将带来哪些影响？](https://www.zhihu.com/question/651351182)
 1. [南昌市气象台发布冰雹红色预警信号「可能造成重雹灾」，什么是重雹灾？要如何应对这种极端天气？](https://www.zhihu.com/question/651343451)
 1. [什么食物是「因制作失误才被发明出来的」？](https://www.zhihu.com/question/642200924)
-1. [《英雄联盟》联赛 BO5 赛制是否时间太长而影响选手的身体健康？](https://www.zhihu.com/question/651243604)
 1. [明明Rust可以直接调用C了，为什么还设计出了unsafe模式？](https://www.zhihu.com/question/651290783)
 1. [鸿蒙智行 AITO 全系 3 月交付新车 31727 辆，该品牌市场竞争力如何？](https://www.zhihu.com/question/651190710)
 1. [建不建议买沃尔沃XC60？为什么？](https://www.zhihu.com/question/371119557)
@@ -214,7 +233,6 @@
 1. [什么才叫文笔幼稚？](https://www.zhihu.com/question/469012248)
 1. [为什么玩乐器的人都不喜欢让别人碰自己的乐器？](https://www.zhihu.com/question/377421755)
 1. [如何系统的入门大模型？](https://www.zhihu.com/question/621550974)
-1. [是什么让你开始放下手机去读书？](https://www.zhihu.com/question/303137880)
 1. [古代战争中，步兵是如何经历长途奔袭还能保持作战能力的？](https://www.zhihu.com/question/650460938)
 1. [如果《三体》拍了电影，谁适合饰演庄颜这个角色？](https://www.zhihu.com/question/314658553)
 1. [为什么男朋友父母刚把婚房的首付付了，接着把自己住的房子卖了?](https://www.zhihu.com/question/648115887)
