--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,71 +1,83 @@
 # 2024-04-04
 
-共 67 条
+共 79 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 01:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 04 2024 02:00:40 GMT+0800 (China Standard Time) -->
 1. [台湾强震已致9死934伤](https://so.toutiao.com/search?keyword=台湾强震已致9死934伤)
 1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
 1. [来看各地清明文化习俗](https://so.toutiao.com/search?keyword=来看各地清明文化习俗)
-1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
-1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
 1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
+1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
+1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
 1. [江西一夜闪电4.4万次](https://so.toutiao.com/search?keyword=江西一夜闪电4.4万次)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
 1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
-1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
-1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
 1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
 1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
-1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [雷军：小米SU7大定超过10万单](https://so.toutiao.com/search?keyword=雷军：小米SU7大定超过10万单)
-1. [司法部：深刻汲取唐一军教训](https://so.toutiao.com/search?keyword=司法部：深刻汲取唐一军教训)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
-1. [官方回应大连星海湾大桥违建](https://so.toutiao.com/search?keyword=官方回应大连星海湾大桥违建)
-1. [蒋勤勤说自己美不自知](https://so.toutiao.com/search?keyword=蒋勤勤说自己美不自知)
+1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
+1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
 1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
+1. [俄专家谈以军袭伊朗使馆：失去理智](https://so.toutiao.com/search?keyword=俄专家谈以军袭伊朗使馆：失去理智)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
 1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
 1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
-1. [大V谈唐一军仕途：攀上高峰迅速滑落](https://so.toutiao.com/search?keyword=大V谈唐一军仕途：攀上高峰迅速滑落)
+1. [雷军：小米SU7大定超过10万单](https://so.toutiao.com/search?keyword=雷军：小米SU7大定超过10万单)
 1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
-1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
-1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
-1. [俄专家谈以军袭伊朗使馆：失去理智](https://so.toutiao.com/search?keyword=俄专家谈以军袭伊朗使馆：失去理智)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [特斯拉中国推出最长5年0利息](https://so.toutiao.com/search?keyword=特斯拉中国推出最长5年0利息)
+1. [官方回应大连星海湾大桥违建](https://so.toutiao.com/search?keyword=官方回应大连星海湾大桥违建)
 1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
-1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
+1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
+1. [专家解读解放军在中缅边境实弹演习](https://so.toutiao.com/search?keyword=专家解读解放军在中缅边境实弹演习)
+1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
+1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
+1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
+1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
+1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
+1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
 1. [马英九读《与妻诀别书》哽咽](https://so.toutiao.com/search?keyword=马英九读《与妻诀别书》哽咽)
+1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
+1. [以军两场空袭或致中东局势全面升级](https://so.toutiao.com/search?keyword=以军两场空袭或致中东局势全面升级)
+1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
+1. [台湾著名景点宜兰龟山岛断裂](https://so.toutiao.com/search?keyword=台湾著名景点宜兰龟山岛断裂)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
+1. [《九龙城寨之围城》发布国际版预告](https://so.toutiao.com/search?keyword=《九龙城寨之围城》发布国际版预告)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [以色列袭击伊朗驻叙大使馆意欲何为](https://so.toutiao.com/search?keyword=以色列袭击伊朗驻叙大使馆意欲何为)
+1. [《九龙城寨之围城》打戏拳拳到肉](https://so.toutiao.com/search?keyword=《九龙城寨之围城》打戏拳拳到肉)
+1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
+1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
+1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
+1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
+1. [司法部：深刻汲取唐一军教训](https://so.toutiao.com/search?keyword=司法部：深刻汲取唐一军教训)
+1. [蒋勤勤说自己美不自知](https://so.toutiao.com/search?keyword=蒋勤勤说自己美不自知)
+1. [大V谈唐一军仕途：攀上高峰迅速滑落](https://so.toutiao.com/search?keyword=大V谈唐一军仕途：攀上高峰迅速滑落)
+1. [江西省委：坚决拥护中央调查唐一军](https://so.toutiao.com/search?keyword=江西省委：坚决拥护中央调查唐一军)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [乌无人机投弹砸中俄士兵头盔被弹开](https://so.toutiao.com/search?keyword=乌无人机投弹砸中俄士兵头盔被弹开)
 1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
 1. [火锅店内多人打架 有人拿锅底泼人](https://so.toutiao.com/search?keyword=火锅店内多人打架+有人拿锅底泼人)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
-1. [专家解读解放军在中缅边境实弹演习](https://so.toutiao.com/search?keyword=专家解读解放军在中缅边境实弹演习)
-1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
-1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
 1. [安理会就伊朗驻叙使馆遇袭开会](https://so.toutiao.com/search?keyword=安理会就伊朗驻叙使馆遇袭开会)
-1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
 1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
-1. [《九龙城寨之围城》打戏拳拳到肉](https://so.toutiao.com/search?keyword=《九龙城寨之围城》打戏拳拳到肉)
 1. [华为门店回应P70发布时间](https://so.toutiao.com/search?keyword=华为门店回应P70发布时间)
 1. [地图上看台湾地震各地受灾情况](https://so.toutiao.com/search?keyword=地图上看台湾地震各地受灾情况)
 1. [杭州女子卖了60多万元股票换成金条](https://so.toutiao.com/search?keyword=杭州女子卖了60多万元股票换成金条)
-1. [特斯拉中国推出最长5年0利息](https://so.toutiao.com/search?keyword=特斯拉中国推出最长5年0利息)
-1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
 1. [女子开店仨月赔60万 脑梗父亲打工](https://so.toutiao.com/search?keyword=女子开店仨月赔60万+脑梗父亲打工)
 1. [白血病患儿妈妈捐髓救人 儿子点赞](https://so.toutiao.com/search?keyword=白血病患儿妈妈捐髓救人+儿子点赞)
 1. [居民被吹坠楼房屋疑为“串串房”](https://so.toutiao.com/search?keyword=居民被吹坠楼房屋疑为“串串房”)
 1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
 1. [网友：提灯定损房东全村或都涉违建](https://so.toutiao.com/search?keyword=网友：提灯定损房东全村或都涉违建)
 1. [沈璃行止打开恋爱任督二脉](https://so.toutiao.com/search?keyword=沈璃行止打开恋爱任督二脉)
 1. [提灯定损房东被行拘](https://so.toutiao.com/search?keyword=提灯定损房东被行拘)
-1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
 1. [男子在提灯定损房东楼下开播遭驱离](https://so.toutiao.com/search?keyword=男子在提灯定损房东楼下开播遭驱离)
 1. [马英九：两岸青年交流浑然天成](https://so.toutiao.com/search?keyword=马英九：两岸青年交流浑然天成)
 1. [“贵妇”撑起县城消费的天花板](https://so.toutiao.com/search?keyword=“贵妇”撑起县城消费的天花板)
 1. [福宝在哪上户口还没定](https://so.toutiao.com/search?keyword=福宝在哪上户口还没定)
-1. [以军两场空袭或致中东局势全面升级](https://so.toutiao.com/search?keyword=以军两场空袭或致中东局势全面升级)
 1. [南京大学回应考研生因虐猫被刷](https://so.toutiao.com/search?keyword=南京大学回应考研生因虐猫被刷)
 1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
 1. [万科A：Q1合同销售金额579.8亿元](https://so.toutiao.com/search?keyword=万科A：Q1合同销售金额579.8亿元)
