--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,51 +1,66 @@
 # 2024-04-04
 
-共 88 条
+共 96 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 03:00:33 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 04 2024 04:00:41 GMT+0800 (China Standard Time) -->
 1. [台湾强震已致9死934伤](https://so.toutiao.com/search?keyword=台湾强震已致9死934伤)
 1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
 1. [来看各地清明文化习俗](https://so.toutiao.com/search?keyword=来看各地清明文化习俗)
 1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
-1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
-1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
 1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
+1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
 1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
-1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
-1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
-1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
-1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
-1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [福建江西部分铁路因台地震临时封锁](https://so.toutiao.com/search?keyword=福建江西部分铁路因台地震临时封锁)
-1. [专家解读解放军在中缅边境实弹演习](https://so.toutiao.com/search?keyword=专家解读解放军在中缅边境实弹演习)
-1. [俄专家谈以军袭伊朗使馆：失去理智](https://so.toutiao.com/search?keyword=俄专家谈以军袭伊朗使馆：失去理智)
-1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
-1. [江西一夜闪电4.4万次](https://so.toutiao.com/search?keyword=江西一夜闪电4.4万次)
-1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
-1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
-1. [官方回应大连星海湾大桥违建](https://so.toutiao.com/search?keyword=官方回应大连星海湾大桥违建)
-1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
-1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
-1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
-1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
 1. [男子在综合执法车上呕吐后死亡](https://so.toutiao.com/search?keyword=男子在综合执法车上呕吐后死亡)
-1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
+1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
+1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
+1. [中国陆军赴俄参赛队抵达比赛地域](https://so.toutiao.com/search?keyword=中国陆军赴俄参赛队抵达比赛地域)
+1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [网友称举报上饶房屋违建官方答非所问](https://so.toutiao.com/search?keyword=网友称举报上饶房屋违建官方答非所问)
+1. [官方回应大连星海湾大桥违建](https://so.toutiao.com/search?keyword=官方回应大连星海湾大桥违建)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
+1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
+1. [专家解读解放军在中缅边境实弹演习](https://so.toutiao.com/search?keyword=专家解读解放军在中缅边境实弹演习)
+1. [监控记录台地震来临时两个家庭反应](https://so.toutiao.com/search?keyword=监控记录台地震来临时两个家庭反应)
+1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
 1. [台湾强震会影响上海高层建筑吗](https://so.toutiao.com/search?keyword=台湾强震会影响上海高层建筑吗)
+1. [以色列袭击伊朗驻叙大使馆意欲何为](https://so.toutiao.com/search?keyword=以色列袭击伊朗驻叙大使馆意欲何为)
+1. [开封王婆请假一个月](https://so.toutiao.com/search?keyword=开封王婆请假一个月)
+1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
+1. [祁连山盗采事件举报人坠亡](https://so.toutiao.com/search?keyword=祁连山盗采事件举报人坠亡)
+1. [江西一夜闪电4.4万次](https://so.toutiao.com/search?keyword=江西一夜闪电4.4万次)
+1. [台专家：地震威力如32颗原子弹爆炸](https://so.toutiao.com/search?keyword=台专家：地震威力如32颗原子弹爆炸)
+1. [以军两场空袭或致中东局势全面升级](https://so.toutiao.com/search?keyword=以军两场空袭或致中东局势全面升级)
+1. [以色列对慈善车队遇袭认错难平众怒](https://so.toutiao.com/search?keyword=以色列对慈善车队遇袭认错难平众怒)
+1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
+1. [欧文27分 勇士终结独行侠7连胜](https://so.toutiao.com/search?keyword=欧文27分+勇士终结独行侠7连胜)
+1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
+1. [台湾地震：整片山体滑落](https://so.toutiao.com/search?keyword=台湾地震：整片山体滑落)
+1. [百日咳六问六答](https://so.toutiao.com/search?keyword=百日咳六问六答)
+1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
+1. [专家分析台湾地震成因](https://so.toutiao.com/search?keyword=专家分析台湾地震成因)
+1. [俄专家谈以军袭伊朗使馆：失去理智](https://so.toutiao.com/search?keyword=俄专家谈以军袭伊朗使馆：失去理智)
+1. [菲总统姐姐：菲操弄南海议题很危险](https://so.toutiao.com/search?keyword=菲总统姐姐：菲操弄南海议题很危险)
+1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
+1. [雷军：大家是不是该叫我雷厂长了](https://so.toutiao.com/search?keyword=雷军：大家是不是该叫我雷厂长了)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
+1. [台湾多地居民：地震时路面像波浪](https://so.toutiao.com/search?keyword=台湾多地居民：地震时路面像波浪)
+1. [福建江西部分铁路因台地震临时封锁](https://so.toutiao.com/search?keyword=福建江西部分铁路因台地震临时封锁)
+1. [小米10年老粉喜提SU7](https://so.toutiao.com/search?keyword=小米10年老粉喜提SU7)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
 1. [王婆面对“泼天流量”如何保持清醒](https://so.toutiao.com/search?keyword=王婆面对“泼天流量”如何保持清醒)
 1. [台湾百年大烟囱被强震“拦头折断”](https://so.toutiao.com/search?keyword=台湾百年大烟囱被强震“拦头折断”)
-1. [以色列袭击伊朗驻叙大使馆意欲何为](https://so.toutiao.com/search?keyword=以色列袭击伊朗驻叙大使馆意欲何为)
 1. [以媒：以军在加沙每个人都为所欲为](https://so.toutiao.com/search?keyword=以媒：以军在加沙每个人都为所欲为)
-1. [台湾多地居民：地震时路面像波浪](https://so.toutiao.com/search?keyword=台湾多地居民：地震时路面像波浪)
-1. [提灯定损事件伤害了谁](https://so.toutiao.com/search?keyword=提灯定损事件伤害了谁)
-1. [以军两场空袭或致中东局势全面升级](https://so.toutiao.com/search?keyword=以军两场空袭或致中东局势全面升级)
 1. [地震致郭台铭豪宅顶楼游泳池变瀑布](https://so.toutiao.com/search?keyword=地震致郭台铭豪宅顶楼游泳池变瀑布)
 1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
 1. [福宝在哪上户口还没定](https://so.toutiao.com/search?keyword=福宝在哪上户口还没定)
@@ -54,18 +69,12 @@
 1. [以总理回应7名国际救援人员遭袭身亡](https://so.toutiao.com/search?keyword=以总理回应7名国际救援人员遭袭身亡)
 1. [7.3级地震警报没响 台当局被质疑](https://so.toutiao.com/search?keyword=7.3级地震警报没响+台当局被质疑)
 1. [泽连斯基签署多项缓解兵力不足法案](https://so.toutiao.com/search?keyword=泽连斯基签署多项缓解兵力不足法案)
-1. [中方回应拜登在元首通话中提及的问题](https://so.toutiao.com/search?keyword=中方回应拜登在元首通话中提及的问题)
-1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
-1. [台湾地震 浙江高楼里鱼缸狂摇](https://so.toutiao.com/search?keyword=台湾地震+浙江高楼里鱼缸狂摇)
 1. [雷军：小米SU7大定超过10万单](https://so.toutiao.com/search?keyword=雷军：小米SU7大定超过10万单)
-1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
 1. [小米SU7创始版车主：认可雷军才买](https://so.toutiao.com/search?keyword=小米SU7创始版车主：认可雷军才买)
 1. [中方：感谢韩方饲养员精心照顾福宝](https://so.toutiao.com/search?keyword=中方：感谢韩方饲养员精心照顾福宝)
-1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
 1. [马英九读《与妻诀别书》哽咽](https://so.toutiao.com/search?keyword=马英九读《与妻诀别书》哽咽)
 1. [《九龙城寨之围城》发布国际版预告](https://so.toutiao.com/search?keyword=《九龙城寨之围城》发布国际版预告)
 1. [《九龙城寨之围城》打戏拳拳到肉](https://so.toutiao.com/search?keyword=《九龙城寨之围城》打戏拳拳到肉)
-1. [台民众：此次比9·21强震还可怕](https://so.toutiao.com/search?keyword=台民众：此次比9·21强震还可怕)
 1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
 1. [台湾民众骑车过桥刚好地震](https://so.toutiao.com/search?keyword=台湾民众骑车过桥刚好地震)
 1. [司法部：深刻汲取唐一军教训](https://so.toutiao.com/search?keyword=司法部：深刻汲取唐一军教训)
@@ -90,6 +99,5 @@
 1. [南京大学回应考研生因虐猫被刷](https://so.toutiao.com/search?keyword=南京大学回应考研生因虐猫被刷)
 1. [网友：上饶房东不怕曝光更值得关注](https://so.toutiao.com/search?keyword=网友：上饶房东不怕曝光更值得关注)
 1. [万科A：Q1合同销售金额579.8亿元](https://so.toutiao.com/search?keyword=万科A：Q1合同销售金额579.8亿元)
-1. [祁连山盗采事件举报人坠亡](https://so.toutiao.com/search?keyword=祁连山盗采事件举报人坠亡)
 1. [赵丽颖和粉丝互拍](https://so.toutiao.com/search?keyword=赵丽颖和粉丝互拍)
 <!-- END TOUTIAO -->
